--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
   <div class="carousel">
         <div class="carousel-track">
-            <div class="carousel-slide"><img src="imagem/teste.jpg"
+            <div class="carousel-slide"><img src="teste.jpg"
                     alt="Slide 1"></div>
-            <div class="carousel-slide"><img src="imagem/teste.jpg"
+            <div class="carousel-slide"><img src="teste.jpg"
                     alt="Slide 2"></div>
-            <div class="carousel-slide"><img src="imagem/teste.jpg"
+            <div class="carousel-slide"><img src="teste.jpg"
                     alt="Slide 3"></div>
         </div>
         <button class="carousel-button left">
@@ -79,25 +79,25 @@
 
     <!-- Bloco 2 -->
     <a href="servico1.html" class="bloco-servico">
-      <img src="imagem/teste.jpg" alt="Serviço 1">
+      <img src="teste.jpg" alt="Serviço 1">
       <h3>Serviço1</h3>
     </a>
 
     <!-- Bloco 3 -->
     <a href="servico2.html" class="bloco-servico">
-      <img src="imagem/teste.jpg" alt="Serviço 2">
+      <img src="teste.jpg" alt="Serviço 2">
       <h3>Serviço2</h3>
     </a>
 
     <!-- Bloco 4 -->
     <a href="servico3.html" class="bloco-servico">
-      <img src="imagem/teste.jpg" alt="Serviço 3">
+      <img src="teste.jpg" alt="Serviço 3">
       <h3>Serviço3</h3>
     </a>
 
     <!-- Bloco 5 -->
     <a href="servico4.html" class="bloco-servico">
-      <img src="imagem/teste.jpg" alt="Serviço 4">
+      <img src="teste.jpg" alt="Serviço 4">
       <h3>Serviço4</h3>
     </a>
 
@@ -112,8 +112,8 @@
   <h2>Nossos parceiros</h2>
   <p class="subtitulo">Empresas que confiam em nosso trabalho</p>
   <div class="logos-parceiros">
-    <img src="imagem/teste.jpg" alt="Logo do parceiro 1">
-    <img src="imagem/teste.jpg" alt="Logo do parceiro 2">
+    <img src="teste.jpg" alt="Logo do parceiro 1">
+    <img src="teste.jpg" alt="Logo do parceiro 2">
   </div>
 </section>
 
