--- a/servico.html
+++ b/servico.html
@@ -30,11 +30,11 @@
             <a href="servico.html">Serviços</a>
             <ul class = "dropdown">
                 <li><a href ="servico1.html">Serviço 1</a></li>
-                <li><a href ="#">Serviço 2</a></li>
-                <li><a href ="#">Serviço 3</a></li>
-                <li><a href ="#">Serviço 4</a></li>
-                <li><a href ="#">Serviço 5</a></li>
-                <li><a href ="#">Serviço 6</a></li>
+                <li><a href ="servico2.html">Serviço 2</a></li>
+                <li><a href ="servico3.html">Serviço 3</a></li>
+                <li><a href ="servico4.html">Serviço 4</a></li>
+                <li><a href ="servico5.html">Serviço 5</a></li>
+                <li><a href ="servico6.html">Serviço 6</a></li>
             </ul>
         </li>
         <li><a href ="contato.html">Contato</a></li>
@@ -59,42 +59,42 @@
 
       <div class="servico">
         <a href="servico1.html">
-          <img src="imagem/teste.jpg" alt="Serviço1">
+          <img src="teste.jpg" alt="Serviço1">
           <h3>Serviço1</h3>
         </a>
       </div>
 
       <div class="servico">
         <a href="servico2.html">
-          <img src="imagem/teste.jpg" alt="Serviço2">
+          <img src="teste.jpg" alt="Serviço2">
           <h3>Serviço2</h3>
         </a>
       </div>
 
       <div class="servico">
         <a href="servico3.html">
-          <img src="imagem/teste.jpg" alt="Serviço3">
+          <img src="teste.jpg" alt="Serviço3">
           <h3>Serviço3</h3>
         </a>
       </div>
 
       <div class="servico">
         <a href="servico4.html">
-          <img src="imagem/teste.jpg" alt="Serviço4">
+          <img src="teste.jpg" alt="Serviço4">
           <h3>Serviço4</h3>
         </a>
       </div>
 
       <div class="servico">
         <a href="servico5.html">
-          <img src="imagem/teste.jpg" alt="Serviço5">
+          <img src="teste.jpg" alt="Serviço5">
           <h3>Serviço5</h3>
         </a>
       </div>
 
       <div class="servico">
         <a href="servico6.html">
-          <img src="imagem/teste.jpg" alt="Serviço6">
+          <img src="teste.jpg" alt="Serviço6">
           <h3>Serviço6</h3>
         </a>
       </div>
