--- a/servico6.html
+++ b/servico6.html
@@ -60,7 +60,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
   </div>
   <div class="imagem-servico">
-    <img src="imagem/teste.jpg" alt="Imagem ilustrativa do serviço">
+    <img src="teste.jpg" alt="Imagem ilustrativa do serviço">
   </div>
 </div>
 
