--- a/sobre.html
+++ b/sobre.html
@@ -26,11 +26,11 @@
             <a href="servico.html">Serviços</a>
             <ul class = "dropdown">
                 <li><a href ="servico1.html">Serviço 1</a></li>
-                <li><a href ="#">Serviço 2</a></li>
-                <li><a href ="#">Serviço 3</a></li>
-                <li><a href ="#">Serviço 4</a></li>
-                <li><a href ="#">Serviço 5</a></li>
-                <li><a href ="#">Serviço 6</a></li>
+                <li><a href ="servico2.html">Serviço 2</a></li>
+                <li><a href ="servico3.html">Serviço 3</a></li>
+                <li><a href ="servico4.html">Serviço 4</a></li>
+                <li><a href ="servico5.html">Serviço 5</a></li>
+                <li><a href ="servico6.html">Serviço 6</a></li>
             </ul>
         </li>
         <li><a href ="contato.html">Contato</a></li>
@@ -49,23 +49,23 @@
         <a href="servico.html" class="botao-servicos">CONHEÇA NOSSOS SERVIÇOS</a>
       </div>
       <div class="imagem">
-        <img src="imagem/teste.jpg" alt="Foto exemplo">
+        <img src="teste.jpg" alt="Foto exemplo">
       </div>
     </section>
 
     <section class="principios">
       <div class="principio">
-        <img src="imagem/teste.jpg" alt="Ícone 1">
+        <img src="teste.jpg" alt="Ícone 1">
         <h3>Missão</h3>
         <p>Oferecer as melhores soluções em transportes com rapidez, segurança, confiança e competitividade.</p>
       </div>
       <div class="principio">
-        <img src="imagem/teste.jpg" alt="Ícone 2">
+        <img src="teste.jpg" alt="Ícone 2">
         <h3>Visão</h3>
         <p>Ser referência no transporte de cargas, com inovação e qualidade em todos os processos.</p>
       </div>
       <div class="principio">
-        <img src="imagem/teste.jpg" alt="Ícone 3">
+        <img src="teste.jpg" alt="Ícone 3">
         <h3>Valores</h3>
         <p>Ética, compromisso, responsabilidade, flexibilidade e foco em resultados.</p>
       </div>
